// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminLewAlert component Should create new alert 1`] = `
<div>
  <div
    class="row mb-4"
  >
    <div
      class="col-8 offset-2"
    >
      <div
        class="mb-3"
      >
        <div
          class="alert d-flex justify-content-between mt-3 bg-primary text-white"
          role="alert"
        >
          <div>
            <img
              class="mr-3 alert-icon"
              src="/assets/curriculum/icons/icon-tip.svg"
            />
             
            
          </div>
          <button
            class="alert-dismiss"
            data-testid="dismiss-info"
            role="dismiss"
          >
            <img
              src="/assets/curriculum/icons/dismiss-info.svg"
            />
          </button>
        </div>
      </div>
      <div
        class="text-left"
      >
        <div
          class="row"
        >
          <div
            class="card shadow-sm col-12"
          >
            <div
              class="card-body text-center"
            />
            <div
              class="text-left"
            >
              <div
                class="d-flex flex-column ml-3 mr-3 mb-4"
              >
                <h5
                  data-testid="h5text0"
                >
                  Text
                </h5>
                <input
                  class="form-control"
                  data-testid="input0"
                  placeholder=""
                  type="text"
                  value=""
                />
              </div>
              <div
                class="d-flex flex-column ml-3 mr-3 mb-4"
              >
                <h5
                  data-testid="h5type1"
                >
                  Type
                </h5>
                <div
                  class="dropdown"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="dropdown-toggle btn btn-none"
                    type="button"
                  >
                    info
                  </button>
                </div>
              </div>
              <div
                class="d-flex flex-column ml-3 mr-3 mb-4"
              >
                <h5
                  data-testid="h5url2"
                >
                  Url
                </h5>
                <input
                  class="form-control"
                  data-testid="input2"
                  placeholder=""
                  type="text"
                  value=""
                />
              </div>
              <div
                class="d-flex flex-column ml-3 mr-3 mb-4"
              >
                <h5
                  data-testid="h5urlCaption3"
                >
                  Urlcaption
                </h5>
                <input
                  class="form-control"
                  data-testid="input3"
                  placeholder=""
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="text-center mb-4"
            >
              <button
                class="btn bg-primary"
                style="color: rgb(255, 255, 255);"
              >
                Create New Alert
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AdminLewAlert component Should refuse creating new alert with incomplete data 1`] = `
<div>
  <div
    class="row mb-4"
  >
    <div
      class="col-8 offset-2"
    >
      <div
        class="mb-3"
      >
        <div
          class="alert d-flex justify-content-between mt-3 bg-primary text-white"
          role="alert"
        >
          <div>
            <img
              class="mr-3 alert-icon"
              src="/assets/curriculum/icons/icon-tip.svg"
            />
             
            <a
              class="text-white"
              href="url"
              rel="noopener noreferrer"
              target="_blank"
            >
              caption
            </a>
          </div>
          <button
            class="alert-dismiss"
            data-testid="dismiss-info"
            role="dismiss"
          >
            <img
              src="/assets/curriculum/icons/dismiss-info.svg"
            />
          </button>
        </div>
      </div>
      <div
        class="text-left"
      >
        <div
          class="row"
        >
          <div
            class="card shadow-sm col-12"
          >
            <div
              class="card-body text-center"
            />
            <div
              class="text-left"
            >
              <div
                class="d-flex flex-column ml-3 mr-3 mb-4"
              >
                <h5
                  data-testid="h5text0"
                >
                  Text
                </h5>
                <input
                  class="form-control"
                  data-testid="input0"
                  placeholder=""
                  type="text"
                  value=""
                />
                <h6
                  class="text-danger mb-0"
                >
                  Required
                </h6>
              </div>
              <div
                class="d-flex flex-column ml-3 mr-3 mb-4"
              >
                <h5
                  data-testid="h5type1"
                >
                  Type
                </h5>
                <div
                  class="dropdown"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="dropdown-toggle btn btn-none"
                    type="button"
                  >
                    info
                  </button>
                </div>
              </div>
              <div
                class="d-flex flex-column ml-3 mr-3 mb-4"
              >
                <h5
                  data-testid="h5url2"
                >
                  Url
                </h5>
                <input
                  class="form-control"
                  data-testid="input2"
                  placeholder=""
                  type="text"
                  value="url"
                />
              </div>
              <div
                class="d-flex flex-column ml-3 mr-3 mb-4"
              >
                <h5
                  data-testid="h5urlCaption3"
                >
                  Urlcaption
                </h5>
                <input
                  class="form-control"
                  data-testid="input3"
                  placeholder=""
                  type="text"
                  value="caption"
                />
              </div>
            </div>
            <div
              class="text-center mb-4"
            >
              <button
                class="btn bg-primary"
                style="color: rgb(255, 255, 255);"
              >
                Create New Alert
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
